--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+slides/*.png filter=lfs diff=lfs merge=lfs -text
+slides/*.pdf filter=lfs diff=lfs merge=lfs -text
 slides/* filter=lfs diff=lfs merge=lfs -text
